out/2026-01-20_04/2026-01-20_04.log
/bin/bash: line 11: rinf: command not found
compiling: atom_xyz/xyz_tmp/xyz_phgdh.f90
csv_interface/csv_bridge.c: In function ‘fortran_to_ocaml’:
csv_interface/csv_bridge.c:77:58: error: expected ‘;’ before ‘}’ token
   77 |             snprintf(buffer,MAX_DOUBLE_STR,"%f%fi",re,im)
      |                                                          ^
      |                                                          ;
   78 |         }
      |         ~                                                 
make[1]: *** [BuildExe.mk:277: _build/release/obj/csv_bridge.o] Error 1
